--- a/ElCazador.Web/package.json
+++ b/ElCazador.Web/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.15.3",
     "core-js": "^2.4.1",
+    "element-ui": "^2.4.7",
     "font-awesome": "^4.6.3",
+    "postcss-loader": "^3.0.0",
     "vue": "^2.1.8",
-    "vue-template-compiler": "^2.1.8",
     "vue-router": "^2.1.1",
     "vue-server-renderer": "^2.1.8",
+    "vue-template-compiler": "^2.1.8",
     "vuex": "^2.1.1",
     "vuex-router-sync": "^4.0.1"
   },
