--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,37 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": ".NET Core Launch (web)",
-        //     "type": "coreclr",
-        //     "request": "launch",
-        //     "preLaunchTask": "build",
-        //     "program": "${workspaceFolder}/ElCazador.Web/bin/Debug/netcoreapp2.0/ElCazador.Web.dll",
-        //     "args": [],
-        //     "cwd": "${workspaceFolder}/ElCazador.Web",
-        //     "stopAtEntry": false,
-        //     "internalConsoleOptions": "openOnSessionStart",
-        //     "launchBrowser": {
-        //         "enabled": true,
-        //         "args": "${auto-detect-url}",
-        //         "windows": {
-        //             "command": "cmd.exe",
-        //             "args": "/C start ${auto-detect-url}"
-        //         },
-        //         "osx": {
-        //             "command": "open"
-        //         },
-        //         "linux": {
-        //             "command": "xdg-open"
-        //         }
-        //     },
-        //     "env": {
-        //         "ASPNETCORE_ENVIRONMENT": "Development"
-        //     },
-        //     "sourceFileMap": {
-        //         "/Views": "${workspaceFolder}/Views"
-        //     }
-        // },
+        {
+            "name": "ElCazador Terminal",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/ElCazador.Terminal/bin/Debug/netcoreapp2.1/ElCazador.Terminal.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "integratedTerminal"
+        }, 
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
