--- a/ElCazador.Web/package.json
+++ b/ElCazador.Web/package.json
@@ -8,11 +8,13 @@
     "install": "webpack --config webpack.config.vendor.js"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.0.3",
     "axios": "^0.15.3",
     "core-js": "^2.4.1",
     "element-ui": "^2.4.7",
     "font-awesome": "^4.6.3",
     "postcss-loader": "^3.0.0",
+    "tslib": "^1.9.3",
     "vue": "^2.1.8",
     "vue-router": "^2.1.1",
     "vue-server-renderer": "^2.1.8",
