--- a/ElCazador.Test/ElCazador.Test.csproj
+++ b/ElCazador.Test/ElCazador.Test.csproj
@@ -1,20 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="moq" Version="4.10.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0"/>
+    <PackageReference Include="moq" Version="4.10.0"/>
+    <PackageReference Include="xunit" Version="2.3.1"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="*"/>
+    <PackageReference Include="Newtonsoft.Json" Version="*"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\ElCazador.Worker\ElCazador.Worker.csproj" />
+    <ProjectReference Include="..\ElCazador.Worker\ElCazador.Worker.csproj"/>
+    <ProjectReference Include="..\ElCazador.Web\ElCazador.Web.csproj"/>
   </ItemGroup>
-
 </Project>
