--- a/ElCazador.Web/ElCazador.Web.csproj
+++ b/ElCazador.Web/ElCazador.Web.csproj
@@ -14,22 +14,23 @@
     </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
   </ItemGroup>
   <ItemGroup>
-    <None Remove="yarn.lock" />
-    <Content Remove="ClientApp\**" />
+    <None Remove="yarn.lock"/>
+    <Content Remove="ClientApp\**"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ElCazador.Worker\ElCazador.Worker.csproj" />
+    <ProjectReference Include="..\ElCazador.Worker\ElCazador.Worker.csproj"/>
   </ItemGroup>
   <Target Name="RunWebpack" AfterTargets="ComputeFilesToPublish">
-    <Exec Command="npm install" />
-    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod" />
-    <Exec Command="node node_modules/webpack/bin/webpack.js --env.prod" />
+    <Exec Command="npm install"/>
+    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod"/>
+    <Exec Command="node node_modules/webpack/bin/webpack.js --env.prod"/>
     <ItemGroup>
-      <DistFiles Include="wwwroot\dist\**; ClientApp\dist\**" />
+      <DistFiles Include="wwwroot\dist\**; ClientApp\dist\**"/>
       <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
         <RelativePath>%(DistFiles.Identity)</RelativePath>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
