--- a/ElCazador.Worker/ElCazador.Worker.csproj
+++ b/ElCazador.Worker/ElCazador.Worker.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="*"/>
+    <PackageReference Include="Newtonsoft.Json" Version="*"/>
   </ItemGroup>
 </Project>
