--- a/ElCazador.Web/appsettings.json
+++ b/ElCazador.Web/appsettings.json
@@ -7,5 +7,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ElCazador": {
+    "IPAddress": "10.64.13.98",
+    "Spoofer": {
+      "NBNS": true,
+      "LLMNR": true,
+      "Inspect": false
+    },
+    "ImpacketExamplesPath": "/Users/elpatron/Documents/Tools/impacket/examples/",
+    "DumpPath": "./"
   }
 }
