Finished LSASS Dump

--- a/ElCazador.Web/appsettings.json
+++ b/ElCazador.Web/appsettings.json
@@ -16,6 +16,6 @@
       "Inspect": false
     },
     "ImpacketExamplesPath": "/Users/elpatron/Documents/Tools/impacket/examples/",
-    "DumpPath": "./"
+    "DumpPath": "/Users/elpatron/Documents/Projects/ElCazador/Dumps/"
   }
 }
