Added new error check for wmiexec

--- a/ElCazador.Web/appsettings.json
+++ b/ElCazador.Web/appsettings.json
@@ -9,13 +9,13 @@
     }
   },
   "ElCazador": {
-    "IPAddress": "10.64.13.98",
+    "IPAddress": "10.64.11.107",
     "Spoofer": {
       "NBNS": true,
       "LLMNR": true,
       "Inspect": false
     },
-    "ImpacketExamplesPath": "/Users/elpatron/Documents/Tools/impacket/examples/",
-    "DumpPath": "/Users/elpatron/Documents/Projects/ElCazador/Dumps/"
+    "ImpacketExamplesPath": "C:\\Users\\sfr\\Documents\\tools\\impacket\\examples\\",
+    "DumpPath": "C:\\Users\\sfr\\Documents\\tools\\ElCazador\\Dumps"
   }
 }
