--- a/ElCazador.Web/package.json
+++ b/ElCazador.Web/package.json
@@ -35,7 +35,7 @@
     "cross-env": "^3.2.4",
     "css-loader": "^0.26.1",
     "event-source-polyfill": "^0.0.7",
-    "extract-text-webpack-plugin": "^2.0.0-rc",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
     "jquery": "^2.2.1",
     "node-sass": "^4.1.0",
@@ -44,7 +44,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.2",
-    "webpack": "^2.2.0",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.1.2",
     "webpack-hot-middleware": "^2.12.2"
   }
 }
