--- a/ElCazador.Web/appsettings.json
+++ b/ElCazador.Web/appsettings.json
@@ -9,13 +9,16 @@
     }
   },
   "ElCazador": {
-    "IPAddress": "10.64.11.107",
+    "IPAddress": "10.211.55.4",
     "Spoofer": {
       "NBNS": true,
       "LLMNR": true,
       "Inspect": false
     },
-    "ImpacketExamplesPath": "C:\\Users\\sfr\\Documents\\tools\\impacket\\examples\\",
-    "DumpPath": "C:\\Users\\sfr\\Documents\\tools\\ElCazador\\Dumps"
+    "ImpacketExamplesPath": "C:\\Users\\elpatron\\Documents\\tools\\impacket\\examples\\",
+    "MimikatzExecutable": "C:\\Users\\elpatron\\Documents\\tools\\mimikatz\\x64\\mimikatz.exe",
+    "PythonExecutable": "python.exe",
+    "DumpPath": "C:\\Users\\elpatron\\Documents\\tools\\ElCazador\\Dumps\\",
+    "ProcdumpExecutable": "C:\\Users\\elpatron\\Documents\\tools\\Procdump\\procdump64.exe"
   }
 }
